# command-line-rust

./: Cargo.toml  README.md
catr/src/: lib.rs
echor/: Cargo.toml
echor/src/: main.rs
headr/: Cargo.toml
headr/src/: lib.rs
hello/tests/: cli.rs
src/: lib.rs
src/cat/: main.rs  mod.rs
src/diff/: main.rs  mod.rs
src/echo/: main.rs  mod.rs
src/head/: main.rs  mod.rs
src/host/: main.rs  mod.rs
src/ldd/: main.rs  mod.rs
src/netcat/: main.rs  mod.rs
src/readelf/: main.rs
src/strace/: main.rs  mod.rs
src/tcpdump/: main.rs
src/tree/: main.rs  mod.rs
src/wc/: main.rs  mod.rs
tests/: lib.rs
tests/head/: mod.rs
tests/wc/: mod.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
