[package]
name = "command-line-rust"
version = "0.1.0"
edition = "2021"
authors = ["Takashi Idobe <mail@takashiidobe.com>"]
default-run = "diff"

[[bin]]
name = "head"
path = "src/head/main.rs"

[[bin]]
name = "hello"
path = "src/hello/main.rs"

[[bin]]
name = "false"
path = "src/false/main.rs"

[[bin]]
name = "true"
path = "src/true/main.rs"

[[bin]]
name = "echo"
path = "src/echo/main.rs"

[[bin]]
name = "wc"
path = "src/wc/main.rs"

[[bin]]
name = "cat"
path = "src/cat/main.rs"

[[bin]]
name = "strace"
path = "src/strace/main.rs"

[[bin]]
name = "netcat"
path = "src/netcat/main.rs"

[[bin]]
name = "tree"
path = "src/tree/main.rs"

[[bin]]
name = "host"
path = "src/host/main.rs"

[[bin]]
name = "readelf"
path = "src/readelf/main.rs"

[[bin]]
name = "ldd"
path = "src/ldd/main.rs"

[[bin]]
name = "tcpdump"
path = "src/tcpdump/main.rs"

[[bin]]
name = "diff"
path = "src/diff/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
clap = { version = "3", features = ["derive"] }
dns-lookup = "2.0.2"
goblin = "0.6.1"
libc = "0.2.142"
nix = "0.26.2"
num_enum = "0.6.1"
owo-colors = "3.5.0"
pcap = "1.1.0"
similar = "2.2.1"
tokio = { version = "1.28.1", features = ["full"] }
trust-dns-resolver = { version = "0.22.0", features = ["dns-over-rustls"] }
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
