[package]
name = "wcr"
version = "0.1.0"
edition = "2021"
authors = ["Takashi Idobe <idobetakashi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"

